force-app/main/default/objects/QTB_Quote_Promotion__c/QTB_Quote_Promotion__c.object-meta.xml
<CustomObject>
    <description>#GITLAB: 376 --&gt; to store the quote promotions</description>
    <label>Quote Promotion</label>
    <nameField>
        <label>Quote Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Promotions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>