force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Promo_Amount__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Amount__c</fullName>
    <label>Promotion Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>