force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Promo_Applied__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#GITLAB: 376 --&gt; to check whether the promo applied or not on the quote</description>
    <label>Promotion Applied</label>
    <type>Checkbox</type>
</CustomField>