force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Code__c</fullName>
    <description>Gitlab#378 - To store Promo Code from promotions</description>
    <label>Promotion Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>