force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Promo_Description__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Description__c</fullName>
    <description>Gitlab#378 - to store Promotion Description from Promotions</description>
    <label>Promotion Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>