force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Promo_Percent__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Percent__c</fullName>
    <label>Promotion Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>