force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Promo_Product__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gitlab#378 - to store promotion product</description>
    <label>Promotion Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Promotions</relationshipLabel>
    <relationshipName>Quote_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>