force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Promo_Term__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promo_Term__c</fullName>
    <description>Gitlab#378 - to store Promo Term from Promotions</description>
    <label>Promotion Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>