force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Promotion_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promotion_End_Date__c</fullName>
    <description>Gitlab#486 - to store promotion end date</description>
    <label>Promotion End Date</label>
    <type>Date</type>
</CustomField>