force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Promotion_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Promotion_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#GITLAB:376 -&gt; to store the promotion that applied on the quote</description>
    <label>Promotion Name</label>
    <referenceTo>QTB_Promotion__c</referenceTo>
    <relationshipLabel>Quote Promotions</relationshipLabel>
    <relationshipName>Quote_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>