force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Quote__c.field-meta.xml
<CustomField>
    <fullName>QTB_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#GITLAB:376 --&gt; to store the Quote information</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Promotions</relationshipLabel>
    <relationshipName>Quote_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>