force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Store_Promotion_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Store_Promotion_Name__c</fullName>
    <description>Gitlab# 486 - to store promotion name so as to display in qle drawer</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Promotion Name</label>
    <type>Text</type>
</CustomField>