force-app/main/default/objects/QTB_Quote_Promotion__c/fields/QTB_Targets_Quote__c.field-meta.xml
<CustomField>
    <fullName>QTB_Targets_Quote__c</fullName>
    <description># GitLab 487 - Indicates if the Quote Promotion targets Product or Quote</description>
    <formula>ISBLANK( QTB_Promo_Product__c )</formula>
    <inlineHelpText>Promotions targets Quote instead of Product</inlineHelpText>
    <label>Targets Quote</label>
    <type>Checkbox</type>
</CustomField>